fix hat overlap post-card

--- a/_sass/blog/_post-card.scss
+++ b/_sass/blog/_post-card.scss
@@ -1,6 +1,8 @@
 .post-card {
   padding-bottom: 75px;
   height: 100%;
+  position: relative;
+  z-index: 1;
 
   &__tag {
     background: #292f47;
